manifest/aba444/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-demo-web
  namespace: demo
spec:
  rules:
    - host: app.stromcash.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-app
                port:
                  number: 3000
    - host: admin.stromcash.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-admin
                port:
                  number: 3000
    - host: api.stromcash.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-api
                port:
                  number: 3000
  ingressClassName: nginx
